test/files/neg/classtags_dont_use_typetags.scala
object Test extends App {
  def foo[T: TypeTag] = Array[T]()
}