test/files/neg/classtags_dont_use_typetags.check
classtags_dont_use_typetags.scala:4: error: implicit error;
!I evidence$5: ClassTag[T]
  No ClassTag available for T

  def foo[T: TypeTag] = Array[T]()
                                ^
1 error
